fixed bug in composer filter performances now clears the list on small screens

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -22,6 +22,10 @@
     line-height: 100%;
 }
 
+a:hover {
+    color:white;
+}
+
 a:not(.collapsed)
 .rotate-icon {
     -webkit-transform: rotate(180deg);
